k8s/infra/database/minio/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-http
  namespace: minio
spec:
  parentRefs:
    - name: internal-selfsigned
      namespace: gateway
  hostnames:
    - "minio.lan"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio
          port: 80
